avoid use of deprecated methods (mostly Class.newInstance()) (#1774)
* Remove deprecated code

* Remove deprecated

* Remove deprecated code

* Remove deprecated code

* Remove deprecated newInstance method

* Formatting